--- a/www/static/css-src/main.scss
+++ b/www/static/css-src/main.scss
@@ -125,6 +125,12 @@ h2 {
 	background-color: $brand-primary;
 }
 
+/*
+code {
+    color: rgb(133, 133, 133);
+}
+*/
+
 @import 'home';
 @import 'blog';
 @import 'plugins';
